<resources>
    <string name="app_name">HotRims AR</string>
    <string name="match">Match</string>
    <string name="color">Color</string>
    <string name="reviews">Reviews</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="price">Price</string>
    <string name="rating">Rating</string>
    <string name="saved">Saved</string>
    <string name="browse">Browse rims</string>
    <string name="add_car">Add car</string>
    <string name="check_details">Check details</string>
    <string name="price_format">$1%d per wheel</string>
    <string name="max_price_format">Maximum price - %d $</string>
    <string name="min_price_format">Minimum price - %d $</string>
    <string name="processing">Processing</string>
    <string name="no_results">No results</string>
    <string name="no_results_message">Try different filter conditions.</string>
    <string name="ok">Ok</string>
</resources>
