<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_padding"
            android:text="@string/filter"
            android:textColor="@color/md_black_1000"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/minPriceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_padding"
            tools:text="@string/min_price_format"
            android:textColor="@color/md_black_1000" />

        <SeekBar
            android:id="@+id/minPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2000"
            android:progress="1000"
            android:padding="@dimen/half_padding" />

        <TextView
            android:id="@+id/maxPriceLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_padding"
            tools:text="@string/max_price_format"
            android:textColor="@color/md_black_1000" />

        <SeekBar
            android:id="@+id/maxPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="2000"
            android:progress="1000"
            android:padding="@dimen/half_padding" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_padding"
            android:text="Minimum stars"
            android:textColor="@color/md_black_1000" />

        <RatingBar
            android:id="@+id/minRating"
            style="?android:attr/ratingBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:scaleX="0.75"
            android:scaleY="0.75" />

        <TextView
            android:id="@+id/filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_padding"
            android:background="@color/accent"
            android:gravity="center"
            android:paddingBottom="@dimen/half_padding"
            android:paddingTop="@dimen/half_padding"
            android:text="@string/filter"
            android:textAllCaps="true"
            android:textColor="@color/md_white_1000"
            android:foreground="?attr/selectableItemBackground"
            android:textSize="18sp" />

    </LinearLayout>


</android.support.v7.widget.CardView>