<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_padding">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_white_1000"
        android:foreground="?attr/selectableItemBackground"
        android:orientation="vertical"
        android:transitionName="root">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/half_padding"
            android:textColor="@color/md_black_1000"
            android:textSize="18sp"
            android:transitionName="name"
            tools:text="Sparco ASSETTO GARA" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:scaleType="fitCenter"
            android:transitionName="image" />

        <LinearLayout
            android:id="@+id/descriptionContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:transitionName="descriptionContainer">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_padding"
                android:layout_marginTop="@dimen/half_padding"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/half_padding"
                    android:text="@string/color"
                    android:textColor="@color/md_black_1000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/default_padding"
                    android:textColor="@color/md_black_1000"
                    tools:text="Matte Graphite Silver" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_padding"
                android:layout_marginTop="@dimen/half_padding"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/half_padding"
                    android:text="@string/price"
                    android:textColor="@color/md_black_1000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/default_padding"
                    android:textColor="@color/md_black_1000"
                    tools:text="Matte Graphite Silver" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/half_padding"
                android:layout_marginTop="@dimen/half_padding"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="@dimen/half_padding"
                    android:text="@string/rating"
                    android:textColor="@color/md_black_1000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <RatingBar
                    android:id="@+id/rating"
                    style="?android:attr/ratingBarStyleSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/default_padding" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/match"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/accent"
            android:foreground="?attr/selectableItemBackground"
            android:transitionName="match">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:paddingBottom="@dimen/half_padding"
                android:paddingTop="@dimen/half_padding"
                android:text="@string/match"
                android:textAllCaps="true"
                android:textColor="@color/md_white_1000"
                android:textSize="18sp" />

        </RelativeLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>